# player

./: .gitmodules  CMakeLists.txt
src/: App.cpp  App.hpp  main.cpp
src/back/: Backend.cpp  Backend.hpp
src/backend/: Backend.cpp  Backend.hpp
src/front/: Frontend.cpp  Frontend.hpp
src/player/: IPlayer.hpp
src/player/RawPlayer/: RawPlayer.cpp  RawPlayer.hpp
src/utils/: EventSystem.cpp  EventSystem.hpp
